Add complete skin lesion detection ML system with DenseNet201
- Implement real DenseNet201 model with TensorFlow 2.20.0
- Add Flask backend API with prediction, history, and PDF report endpoints
- Integrate frontend components for upload, results, and history
- Add PDF report generation with ReportLab
- Implement SQLite database for prediction storage
- Configure Next.js for backend image integration
- Add comprehensive model classifiers (DenseNet, CPU, PyTorch variants)
- Include setup scripts and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,35 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Backend files
+backend/uploads/
+backend/reports/
+backend/predictions.db
+backend/*.db
+uploads/
+reports/
+*.db
+
+# Test files
+test_*.py
+test_*.js
+start-backend.bat
+
+# ML Models (large files)
+*.h5
+*.keras
+Skin-Lesions-Detection-Deep-learning/
+
+# Generated files
+placeholder.svg
